--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Awesome Books</h1>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+    </table>
+
+    <form action="" method="POST">
+        <input type="text" name="title" id="title" placeholder="Title">
+        <input type="text" name="author" id="author" placeholder="Author">
+        <button type="submit">Add</button>
+    </form>
+
 </body>
 </html>
