--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
             <th>Author</th>
             <th></th>
         </tr>
-        <tr>
-            <td></td>
-        </tr>
+        <tbody id="booksList">
+
+        </tbody>
     </table>
 
-    <form action="" method="POST">
+    <form action="" method="POST" id="bookForm">
         <input type="text" name="title" id="title" placeholder="Title">
         <input type="text" name="author" id="author" placeholder="Author">
         <button type="submit">Add</button>
     </form>
-
+    
+    <script src="js/index.js"></script>
 </body>
 </html>
