--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 <body>
     <h1>Awesome Books</h1>
     <table>
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th></th>
-        </tr>
         <tbody id="booksList">
 
         </tbody>
     </table>
 
-    <form action="" method="POST" id="bookForm">
+    <form action="#" method="POST" id="bookForm">
         <input type="text" name="title" id="title" placeholder="Title">
         <input type="text" name="author" id="author" placeholder="Author">
         <button type="submit">Add</button>
