Edit index.html File

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <h1>Awesome Books</h1>
     <table>
         <tbody id="booksList">
-
         </tbody>
     </table>
-
+    <br>
     <form action="#" method="POST" id="bookForm">
-        <input type="text" name="title" id="title" placeholder="Title">
-        <input type="text" name="author" id="author" placeholder="Author">
+        <input type="text" name="title" id="title" placeholder="Title"> <br> <br>
+        <input type="text" name="author" id="author" placeholder="Author"> <br> <br>
         <button type="submit">Add</button>
     </form>
     
