Style sections using css

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <h1 class="title">All Awesome Books</h1>
                 </a>
                 <ul class="nav-items">
-                    <a href="./index.html" class="nav-link">
+                    <a href="./index.html" class="nav-link list-btn">
                         <li>List |&nbsp;</li>
                     </a>
-                    <a href="#addBook" class="nav-link">
+                    <a href="#addBook" class="nav-link add-btn">
                         <li>Add new |&nbsp;</li>
                     </a>
-                    <a href="#contactSection" class="nav-link">
+                    <a href="#contactSection" class="nav-link contact-btn">
                         <li>Contact</li>
                     </a>
                 </ul>
