--- a/index.html
+++ b/index.html
@@ -18,44 +18,38 @@
                     <h1 class="title">All Awesome Books</h1>
                 </a>
                 <ul class="nav-items">
-                    <a href="#book-list" class="nav-link">
-                        <li class="list-btn">List |&nbsp;</li>
-                    </a>
-                    <a href="#addBook" class="nav-link add-btn">
-                        <li>Add new |&nbsp;</li>
-                    </a>
-                    <a href="#contactSection" class="nav-link contact-btn">
-                        <li>Contact</li>
-                    </a>
+                    <li><a href="#book-list" class="nav-link list-btn">List |&nbsp;</a></li>
+                    <li><a href="#addBook" class="nav-link add-btn">Add new |&nbsp;</a></li>
+                    <li><a href="#contactSection" class="nav-link contact-btn">Contact</a></li>
                 </ul>
 
             </nav>
         </header>
-        <h2 class="list-heading">Book List</h1>
+        <h2 class="list-heading">Book List</h2>
 
-            <div id="book-list" class="booklist">
-                <ul id="booksList">
-                </ul>
-            </div>
+        <div id="book-list" class="booklist">
+            <ul id="booksList">
+            </ul>
+        </div>
 
-            <div class="add-book" id="#addBook">
-                <h2 class="title add-book-heading">Add a new book</h2>
-                <form action="#" method="POST" id="add-book" class="add-book-form">
-                    <input type="text" name="title" id="title" placeholder="Title">
-                    <input type="text" name="author" id="author" placeholder="Author">
-                    <button type="submit">Add</button>
-                </form>
-            </div>
+        <div class="add-book" id="#addBook">
+            <h2 class="title add-book-heading">Add a new book</h2>
+            <form action="#" method="POST" id="add-book" class="add-book-form">
+                <input type="text" name="title" id="title" placeholder="Title">
+                <input type="text" name="author" id="author" placeholder="Author">
+                <button type="submit">Add</button>
+            </form>
+        </div>
 
-            <section class="contact-section" id="#contactSection">
-                <h1>Contact Information</h1>
-                <p>Do you have a question or you just want to say "Hello"?</p>
-                <ul>
-                    <li>Our e-mail: mail@mail.com</li>
-                    <li>Our Phone Number: +00 1800 123 1234</li>
-                    <li>Our Address: St 21, 45721, Montana</li>
-                </ul>
-            </section>
+        <section class="contact-section" id="#contactSection">
+            <h1>Contact Information</h1>
+            <p>Do you have a question or you just want to say "Hello"?</p>
+            <ul>
+                <li>Our e-mail: mail@mail.com</li>
+                <li>Our Phone Number: +00 1800 123 1234</li>
+                <li>Our Address: St 21, 45721, Montana</li>
+            </ul>
+        </section>
 
     </main>
 
