--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
         <header>
             <nav>
-                <a href="#book-list">
-                    <h1 class="title">All Awesome Books</h1>
-                </a>
+                <a href="#book-list" class="title first-heading"><h1>All Awesome Books</h1></a>
                 <ul class="nav-items">
                     <li><a href="#book-list" class="nav-link list-btn">List |&nbsp;</a></li>
                     <li><a href="#addBook" class="nav-link add-btn">Add new |&nbsp;</a></li>
@@ -25,6 +23,7 @@
 
             </nav>
         </header>
+        <span class="date"></span>
         <h2 class="list-heading">Book List</h2>
 
         <div id="book-list" class="booklist">
