--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Awesome Bookss | Mirwais Farahi</title>
+    <title>Awesome Books</title>
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <a href="#book-list" class="logo">Awesome Books</a>
+            <ul class="nav-items">
+                <li><a href="#book-list" class="nav-link list-btn">List |&nbsp;</a></li>
+                <li><a href="#addBook" class="nav-link add-btn">Add new |&nbsp;</a></li>
+                <li><a href="#contactSection" class="nav-link contact-btn">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <span class="date"></span>
+
     <main id="wrapper">
-
-        <header>
-            <nav>
-                <a href="#book-list" class="title first-heading"><h1>All Awesome Books</h1></a>
-                <ul class="nav-items">
-                    <li><a href="#book-list" class="nav-link list-btn">List |&nbsp;</a></li>
-                    <li><a href="#addBook" class="nav-link add-btn">Add new |&nbsp;</a></li>
-                    <li><a href="#contactSection" class="nav-link contact-btn">Contact</a></li>
-                </ul>
-
-            </nav>
-        </header>
-        <span class="date"></span>
-        <h2 class="list-heading">Book List</h2>
+        <h2 class="list-heading">All Awesome Books</h2>
 
         <div id="book-list" class="booklist">
             <ul id="booksList">
@@ -53,7 +54,7 @@
     </main>
 
     <footer>
-        <h3>Copyright <span>@ Mirwais Farahi | Sam</span></h3>
+        <h3>All copyrights are reserved.</h3>
     </footer>
 
     <script src="js/index.js"></script>
